--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
     </div>
     
     <div id="album-gallery">
-      <a target="_blank" rel="noopener noreferrer" href="https://linktr.ee/GeorgeyOfficial">
-      <img class="gallery-covers" src="https://raw.githubusercontent.com/GeorgeyOfficial/coding/main/EPCover.png" alt="Tell All Your Friends EP Cover">
-      </a>
+      <div>
+        <a target="_blank" rel="noopener noreferrer" href="https://linktr.ee/GeorgeyOfficial">
+        <img class="gallery-covers" src="https://raw.githubusercontent.com/GeorgeyOfficial/coding/main/EPCover.png" alt="Tell All Your Friends EP Cover">
+        </a>
+        <a href="https://linktr.ee/GeorgeyOfficial" target="_blank" class="button" id="listen-here">Listen Here</a>
+      </div>
     </div>
   </section>
   
