--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     
     <div id="album-gallery">
-      <div>
+      <div class="album-card">
         <a target="_blank" rel="noopener noreferrer" href="https://linktr.ee/GeorgeyOfficial">
         <img class="gallery-covers" src="https://raw.githubusercontent.com/GeorgeyOfficial/coding/main/EPCover.png" alt="Tell All Your Friends EP Cover">
         </a>
