--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h2>Released February 12</h2>
     <ul>
       <li>Faith / Unworthy</li>
-      <li>Left Behind</li>
+      <li>Places Left Behind</li>
       <li>Haze and Butterflies</li>
     </ul>
   </div>
