--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="album-gallery">
       
       <div class="album-card">
-        <a target="_blank" rel="noopener noreferrer" href="https://linktr.ee/GeorgeyOfficial">
+        <a target="_blank" rel="noopener noreferrer" href="https://linktr.ee/TellAllYourFriends">
         <img class="gallery-covers" src="https://raw.githubusercontent.com/GeorgeyOfficial/coding/main/EPCover.png" alt="Tell All Your Friends EP Cover">
         </a>
         <a href="https://linktr.ee/TellAllYourFriends" target="_blank" class="button" id="listen-here">Listen Here</a>
