--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <a class="nav-link" href="#music">music</a>
   <a class="nav-link" href="#about">about</a>
   <a class="nav-link" href="#contact">contact</a>
+  <a class="nav-link" href="https://www.etsy.com/shop/GeorgeyOfficial">merch</a>
 </nav>
 
 <section class="ep-release">
