--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <a class="footer-link" href="#music">music</a>
         <a class="footer-link" href="#about">about</a>
         <a class="footer-link" href="#contact">contact</a>
+        <a class="footer-link" href="https://www.etsy.com/shop/GeorgeyOfficial">merch</a>
       </div>
       <p class="copyright">Copyright © 2021 Georgey</p>
     </div>
