--- a/index.html
+++ b/index.html
@@ -63,6 +63,23 @@
     
   </section>
   
+  
+  <section id="merch">
+      <h1 class="merch-head">BUY OUR MERCH!</h1>
+  <h2 class="merch-sub">Support our music by purchasing some of the items below.</h2>
+    
+    <div id="merch-gallery">
+
+       <div class="merch-card">
+        <a target="_blank" rel="noopener noreferrer" href="https://linktr.ee/GeorgeyOfficial">
+        <img class="merch-covers" src="https://i.etsystatic.com/30213647/r/il/0cf954/3121986098/il_794xN.3121986098_rwvx.jpg" alt="Double Sticker Pack">
+        </a>
+        <a href="https://linktr.ee/StayUpByGeorgey" target="_blank" class="button" id="listen-here">Two Sticker Pack: Buy Now</a>
+      </div>
+
+  </section>
+  
+  
   <section id="contact">
     <img class="contact-img" src="https://cdn.discordapp.com/attachments/690367256227741726/809912566587064360/image1.jpg" alt="Georgey Band Picture">
     <div>
