--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
     <div id="merch-gallery">
 
        <div class="merch-card">
-        <a target="_blank" rel="noopener noreferrer" href="https://linktr.ee/GeorgeyOfficial">
+        <a target="_blank" rel="noopener noreferrer" href="https://www.etsy.com/shop/GeorgeyOfficial">
         <img class="merch-covers" src="https://i.etsystatic.com/30213647/r/il/0cf954/3121986098/il_794xN.3121986098_rwvx.jpg" alt="Double Sticker Pack">
         </a>
-        <a href="https://linktr.ee/StayUpByGeorgey" target="_blank" class="button" id="listen-here">Two Sticker Pack: Buy Now</a>
+        <a href="https://www.etsy.com/shop/GeorgeyOfficial" target="_blank" class="button" id="listen-here">Two Sticker Pack: Buy Now</a>
       </div>
 
   </section>
